<resources>
    <string name="app_name">赤赤校园理财</string>
    <!--    注册的-->
    <string name="register">注册</string>
    <string name="name">请输入用户名</string>
    <string name="pwd">请输入密码</string>
    <string name="pwd_again">请再输入密码</string>
    <string name="btn_register">注册</string>
    <!--    登录的-->
    <string name="login">登录</string>index
    <string name="tv_register">去注册</string>
    <string name="find_pwd">忘记密码</string>
    <!--    主页导航栏-->
    <string name="index">账单</string>
    <string name="index2">资产</string>
    <string name="index3">预算</string>
    <string name="index4">我的</string>
    <!--    我的导航栏-->
    <string name="tv_user_name">点击登录</string>
    <!--    设置的-->
    <string name="up_pwd">修改密码</string>
    <string name="loginout">退出登录</string>
    <!--    修改密码的-->
    <string name="et_old_pwd">请输入原始密码</string>
    <string name="et_new_pwd">请输入新密码</string>
    <string name="et_new_pwd_again">请再次输入新密码</string>
    <string name="btn_save">保存</string>
    <!--资产的-->
    <string name="et_ass_name">请输入资产名称</string>
    <string name="et_ass_money">请输入账户余额</string>
    <string name="et_ass_remarks">备注</string>
    <!--账单的-->
    <string name="et_acc_money">请输入收支费用</string>
    <string name="et_acc_remarks">备注</string>
    <!--预算的-->
    <string name="et_bud_name">请输入预消费名称</string>
    <string name="et_bud_money">请输入预消费金额</string>
    <string name="et_bud_remarks">备注</string>
    <!--基金的-->
    <string name="tv_fund_name">基金名称</string>
    <string name="tv_fund_rate">基金利率</string>
    <string name="tv_fund_joined">已购买基金</string>
    <string name="tv_fund_remarks">备注</string>
    <string name="btn_fund_join">购买</string>
    <string name="btn_fund_reset">未购买</string>
    <!--工作的-->
    <string name="tv_work_study_name">工作名称</string>
    <string name="tv_work_study_dailySalary">日薪</string>
    <string name="tv_work_study_telephone">联系电话</string>
    <string name="tv_work_study_place">工作地点</string>
    <string name="tv_work_study_remarks">备注</string>
    <string name="tv_work_study_contact_us">联系我们</string>
    <!--按钮-->
    <string name="btn_del">删除</string>
    <string name="btn_update">修改</string>
</resources>