<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <include layout="@layout/main_title_bar" />

    <TextView
        android:id="@+id/tv_fund_desc_fundName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="85dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/shape_white_frame"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:hint="@string/tv_fund_name"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textColor="#000000"
        android:textColorHint="#a3a3a3"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/tv_fund_desc_rate"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/shape_white_frame"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:hint="@string/tv_fund_rate"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textColor="#000000"
        android:textColorHint="#a3a3a3"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_fund_desc_joined"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/shape_white_frame"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:hint="@string/tv_fund_joined"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textColor="#000000"
        android:textColorHint="#a3a3a3"
        android:textSize="20sp" />

    <ScrollView
        android:layout_marginTop="15dp"
        android:layout_width="fill_parent"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/tv_bud_desc_remarks"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="35dp"

            android:layout_marginRight="35dp"
            android:background="@drawable/shape_white_frame"
            android:drawablePadding="15dp"
            android:ellipsize="none"
            android:gravity="center_vertical"
            android:hint="@string/tv_fund_remarks"
            android:inputType="textMultiLine"
            android:paddingLeft="10dp"
            android:singleLine="false"
            android:textColor="#000000"
            android:textColorHint="#a3a3a3"
            android:textSize="20sp" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_fund_desc_buy"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_weight="1"
            android:background="@drawable/register_selector"
            android:text="@string/btn_fund_join"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_fund_desc_reset"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginRight="35dp"
            android:layout_weight="1"
            android:background="@drawable/register_selector"
            android:text="@string/btn_fund_reset"
            android:textColor="@android:color/white"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>
