<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <include layout="@layout/main_title_bar" />


    <ImageView
        android:id="@+id/iv_head"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp"
        android:contentDescription="@null"
        android:src="@drawable/a1004" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="45dp"
            android:text="用户名" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="45dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/shape_white_frame"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/name"
            android:paddingLeft="8dp"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHint="#a3a3a3"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="14dp"
            android:text="密码" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/shape_white_frame"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHint="#a3a3a3"
            android:textSize="14sp" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_remeberme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="5dp"
        android:text="记住账号" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/register_selector"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:text="@string/tv_register"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</LinearLayout>

