<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent">

    <include layout="@layout/main_title_bar"/>

    <EditText
        android:id="@+id/et_ass_desc_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="85dp"
        android:background="@drawable/shape_white_frame"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:hint="@string/et_ass_name"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textColor="#000000"
        android:textColorHint="#a3a3a3"
        android:textSize="20sp"/>
    <Spinner
        android:id="@+id/spinner_ass_desc_type"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="35dp"
        android:entries="@array/assets_spinner_values"
        android:background="@drawable/shape_white_frame"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>
    <EditText
        android:id="@+id/et_ass_desc_money"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/shape_white_frame"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:hint="@string/et_ass_money"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp"
        android:textColor="#000000"
        android:textColorHint="#a3a3a3"
        android:textSize="20sp"/>



    <EditText
        android:id="@+id/et_ass_desc_remarks"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/shape_white_frame"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:hint="@string/et_ass_remarks"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textColor="#000000"
        android:textColorHint="#a3a3a3"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        >

    <Button
        android:id="@+id/btn_ass_desc_del"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/register_selector"
        android:text="删除"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="22sp"/>

        <Button
            android:id="@+id/btn_ass_desc_update"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/register_selector"
            android:text="修改"
            android:textColor="@android:color/white"
            android:textSize="22sp"/>
    </LinearLayout>

</LinearLayout>
